--- a/browser/index.html
+++ b/browser/index.html
@@ -2,8 +2,11 @@
 <html>
 <head>
 	<title></title>
+	<script src='/angular/angular.js'></script>
+	<link rel="stylesheet" type="text/css" href="/bootstrap/dist/css/bootstrap.css">
 </head>
-<body>
+<body ng-app='app'>
 	<h1> Welcome! </h1>
+	{{100}}
 </body>
 </html>
