--- a/browser/index.html
+++ b/browser/index.html
@@ -4,9 +4,15 @@
 	<title></title>
 	<script src='/angular/angular.js'></script>
 	<link rel="stylesheet" type="text/css" href="/bootstrap/dist/css/bootstrap.css">
+  <!-- inject:js -->
+  <script src="/browser/app.js"></script>
+  <script src="/browser/directives/appNav.js"></script>
+  <!-- endinject -->
 </head>
 <body ng-app='app'>
+  <div class='container'>
 	<h1> Welcome! </h1>
-	{{100}}
+  <app-nav></app-nav>
+  </div>
 </body>
 </html>
