started on states

--- a/browser/index.html
+++ b/browser/index.html
@@ -3,9 +3,11 @@
 <head>
 	<title></title>
 	<script src='/angular/angular.js'></script>
+  <script src='/angular-ui-router/release/angular-ui-router.js'></script>
 	<link rel="stylesheet" type="text/css" href="/bootstrap/dist/css/bootstrap.css">
   <!-- inject:js -->
   <script src="/browser/app.js"></script>
+  <script src="/browser/app.states.js"></script>
   <script src="/browser/directives/appNav.js"></script>
   <!-- endinject -->
 </head>
