--- a/browser/index.html
+++ b/browser/index.html
@@ -13,8 +13,11 @@
 </head>
 <body ng-app='app'>
   <div class='container'>
-	<h1> Welcome! </h1>
+
   <app-nav></app-nav>
+
+  <ui-view></ui-view>
+  
   </div>
 </body>
 </html>
