working on auth

--- a/browser/index.html
+++ b/browser/index.html
@@ -8,7 +8,9 @@
   <!-- inject:js -->
   <script src="/browser/app.js"></script>
   <script src="/browser/app.states.js"></script>
+  <script src="/browser/auth.controller.js"></script>
   <script src="/browser/directives/appNav.js"></script>
+  <script src="/browser/services/AuthService.js"></script>
   <!-- endinject -->
 </head>
 <body ng-app='app'>
